# open-vectorizer

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  TODO.md
png2svg/cli/: Cargo.toml
png2svg/cli/src/: main.rs
png2svg/core/: Cargo.toml
png2svg/core/src/: lib.rs
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  wasm.d.ts
